--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                            <button type="submit" class="btn btn-success w-100 d-block">Crear Cita</button>
+                            <button type="submit" class="btn btn-success w-100 d-block">Create appoinment</button>
                     </div>
                 </form>
             </div>
